--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+        <main class="principal">
+            <h1 class="titulo">Todo list app</h1>
+            <div class="card">
+                <div class="card__title">
+                    <img src="./assets/image/cohete.png" alt="imagen" class="imagen">
+                </div>
+                <div class="card__content">
+                    <form action="">
+                        <input type="text" class="input__form" name="task" placeholder="Ingrese el nombre de la tarea">
+                        <button type="submit" class="btn">Agregar</button>
+                    </form>
+
+                    <ul class="todoList">
+                        <li class="item">
+                            <div>
+                                <i class="far fa-regular fa-square-check"></i>
+                                <span>Hacer curso de javascript</span>
+                            </div>
+                            <i class="fas fa-regular fa-delete-left"></i>
+                        </li>
+                        <li class="item">
+                            <div>
+                                <i class="far fa-regular fa-square-check"></i>
+                                <span>Hacer curso de javascript</span>
+                            </div>
+                            <i class="fas fa-regular fa-delete-left"></i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </main>
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
