Configurando evento click y manipulando la entrada del formulario

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <img src="./assets/image/cohete.png" alt="imagen" class="imagen">
                 </div>
                 <div class="card__content">
-                    <form action="">
-                        <input type="text" class="input__form" name="task" placeholder="Ingrese el nombre de la tarea">
-                        <button type="submit" class="btn">Agregar</button>
+                    <form action="" autocomplete="off">
+                        <input  data-form-input type="text" class="input__form" name="task" placeholder="Ingrese el nombre de la tarea">
+                        <button type="submit" class="btn" data-form-btn >Agregar</button>
                     </form>
 
                     <ul class="todoList">
